# foodscholar-lib

./: .gitignore  .readthedocs.yaml  AGENTS.md  BRIEF.md  CONSOLIDATION.md  Makefile  PROGRESS.md  README.md  SKILL.md  config.example.yaml  config.gate.yaml  docker-compose.yaml  layer_b_construction_brief.md  pyproject.toml
docs/: DESIGN_agentic_annotate.md  IMPLEMENTATION_corpus_ingestion_storage.md  conf.py  index.md  layer_a_methods_metrics_and_evolution_brief.md  methods_layer_a_b_brief.md  methods_layer_a_bakeoff_brief.md  methods_layer_a_rework_brief.md  methods_layer_b_c_brief.md  requirements.txt
docs/concepts/: annotation.md  architecture.md  corpus-input.md  glossary.md  layer-a-backbone.md  layer-b-themes.md  layer-c-cards.md  ontology.md  worked-example.md
docs/deliverables/: D_LayerA_KG_Construction_and_Benchmarking_v0.1.docx
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: building-the-graph.md  cli.md  exploring-the-graph.md  tuning-layer-b.md  visualization.md
docs/presentations/: 2026-05-27-foodscholar-architecture-brief.md
docs/reference/: config.md  data-model.md  facade.md  graph-view.md  index.md  ontology.md  storage.md  viz.md
examples/: 01_load_chunks.py  02_run_annotation.py  03_build_layer_a.py  04_query.py
notebooks/: bertopic_explore.ipynb  bertopic_layerb_headtohead.ipynb  bertopic_stack_ablation.ipynb  bottomup_entrypoints.ipynb  build_graph.ipynb  corpus_ingestion_storage_smoke.ipynb  entrypoint_audit.ipynb  explore_foodon.ipynb  graph_build.ipynb  layer_a_method_bakeoff.ipynb  layer_a_synonym_reparent_casestudy.ipynb  layer_c_summarization.ipynb  projection_bakeoff.ipynb  retier_layer_a.ipynb
notebooks/archive/: README.md
research/: build_deliverable_docx.py  build_graph.ipynb  build_layer_a_method_bakeoff_nb.py  build_layer_a_synonym_reparent_nb.py  conftest.py  layer_a_method_bakeoff.ipynb
research/bakeoff/: __init__.py  metrics.py  result.py  scorecard.py
research/fixtures/: mini_foodon.obo
research/tests/: test_agentic_alias.py  test_agentic_relations.py  test_agentic_support.py  test_agentic_tools.py  test_bakeoff_metrics.py  (+2 more)
scripts/: annotate_gate.py  build_bottomup_entrypoints_nb.py  build_dense_index.py  build_entrypoint_audit_nb.py  build_explore_foodon_nb.py  build_foodon_corpus_metrics_report.py  build_graph_clean_nb.py  build_layer_a_method_bakeoff_nb.py  build_layer_a_tree.py  build_projection_bakeoff_nb.py  build_retier_layer_a_nb.py  make_annotated_parquet.py  run_layer_b_inmemory.py  smoke_corpus_storage.sh  test_ingestion_storage.sh
tests/: conftest.py
(+230 files in other folders)
